# ChangeLog for dev-php/PEAR-PEAR
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.70 2006/08/01 04:45:10 sebastian Exp $

*PEAR-PEAR-1.4.10 (01 Aug 2006)

  01 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +PEAR-PEAR-1.4.10.ebuild:
  Version bump.

  29 Jul 2006; Luca Longinotti <chtekk@gentoo.org>
  -files/fix-packagingroot-1.4.6.patch, -PEAR-PEAR-1.4.6-r1.ebuild:
  Remove old version.

*PEAR-PEAR-1.4.9-r2 (12 Jul 2006)

  12 Jul 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +PEAR-PEAR-1.4.9-r2.ebuild:
  XML_RPC 1.5.0.

  07 Jul 2006; Jose Luis Rivero <yoswink@gentoo.org>
  PEAR-PEAR-1.4.9-r1.ebuild:
  Stable on alpha wrt #131371

  23 May 2006; Luca Longinotti <chtekk@gentoo.org>
  -PEAR-PEAR-1.3.6-r5.ebuild, PEAR-PEAR-1.4.6-r1.ebuild:
  Spring cleanup and update used XML_RPC version on 1.4.6 as it's safe to do so.

  21 May 2006; Luca Longinotti <chtekk@gentoo.org> -PEAR-PEAR-1.3.5.ebuild:
  Remove old-style PHP packages.

  03 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  PEAR-PEAR-1.4.9-r1.ebuild:
  Stable on hppa wrt #131371

  01 May 2006; Markus Rothe <corsair@gentoo.org> PEAR-PEAR-1.4.9-r1.ebuild:
  Stable on ppc64

  30 Apr 2006; Mark Loeser <halcy0n@gentoo.org> PEAR-PEAR-1.4.9-r1.ebuild:
  Stable on x86; bug #131371

  28 Apr 2006; Joseph Jezak <josejx@gentoo.org>
  PEAR-PEAR-1.4.9-r1.ebuild:
  Marked ppc stable for bug #131371.

  27 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  PEAR-PEAR-1.4.9-r1.ebuild:
  Stable on sparc wrt #131371

  26 Apr 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -PEAR-PEAR-1.4.8.ebuild, -PEAR-PEAR-1.4.9.ebuild:
  Pull old versions.

  16 Apr 2006; Sebastian Bergmann <sebastian@gentoo.org>
  PEAR-PEAR-1.4.9-r1.ebuild:
  XML_RPC 1.4.8.

  11 Apr 2006; Sebastian Bergmann <sebastian@gentoo.org>
  PEAR-PEAR-1.4.9-r1.ebuild:
  XML_RPC 1.4.7.

*PEAR-PEAR-1.4.9-r1 (07 Apr 2006)
