@@ -1,6 +1,11 @@
 # ChangeLog for dev-php/PEAR-PEAR
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.70 2006/08/01 04:45:10 sebastian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-PEAR/ChangeLog,v 1.71 2006/08/11 12:11:12 sebastian Exp $
+
+  11 Aug 2006; Sebastian Bergmann <sebastian@gentoo.org>
+  PEAR-PEAR-1.4.9-r1.ebuild, PEAR-PEAR-1.4.9-r2.ebuild,
+  PEAR-PEAR-1.4.10.ebuild:
+  Add pear.phpunit.de channel.
 
 *PEAR-PEAR-1.4.10 (01 Aug 2006)
 
